[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/end-of-level/EndOfLevel.gd" type="Script" id=1]
[ext_resource path="res://ui/end-of-level/ScoreLabel.gd" type="Script" id=2]
[ext_resource path="res://ui/end-of-level/HighScoreLabel.gd" type="Script" id=3]
[ext_resource path="res://fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 46
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="EndOfLevel" type="Control"]
pause_mode = 2
margin_right = 360.0
margin_bottom = 640.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 0.360784, 0.47451, 0.905882, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 120.0
margin_right = 180.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 1 )
text = "Your Score"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="HighScoreLabel" type="Label" parent="."]
modulate = Color( 0.147064, 0.253507, 0.617188, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -97.0
margin_right = 180.0
margin_bottom = -61.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="LevelEndLabel" type="Label" parent="."]
modulate = Color( 0.4, 0.7, 1.8, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -279.0
margin_right = 160.0
margin_bottom = -224.0
custom_fonts/font = SubResource( 3 )
text = "Level Complete"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -41.5
margin_right = 53.5
margin_bottom = 41.5

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
margin_right = 107.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Next Level"
flat = true

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
margin_top = 29.0
margin_right = 107.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
flat = true

[node name="RestartButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
margin_top = 58.0
margin_right = 107.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )
text = "Restart Level"
flat = true

[node name="LevelEndTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="focus_exited" from="VBoxContainer/NextLevelButton" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="focus_exited" from="VBoxContainer/MainMenuButton" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="focus_exited" from="VBoxContainer/RestartButton" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
